--- a/_includes/article-list.html
+++ b/_includes/article-list.html
@@ -116,7 +116,9 @@
                 <img class="image" src="{{ _article_cover }}" />
                 <div class="overlay overlay--bottom">
                   <header>
-                    <a href="{{ _article_url }}"><h2 class="card__header">{{ _article.title }}</h2></a>
+                    <a href="{{ _article.pdf | default: _article_url }}" target="_blank">
+                      <h2 class="card__header">{{ _article.title }}</h2>
+                    </a>
                   </header>
                 </div>
               </div>
@@ -132,7 +134,9 @@
             {%- endif -%}
               <div class="card__content">
                 <header>
-                  <a href="{{ _article_url }}"><h2 class="card__header">{{ _article.title }}</h2></a>
+                  <a href="{{ _article.pdf | default: _article_url }}" target="_blank">
+                    <h2 class="card__header">{{ _article.title }}</h2>
+                  </a>
                 </header>
               </div>
           </div>
