--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -3,6 +3,9 @@ layout: page
 type: article
 ---
 
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="/assets/js/pbcc-state-reps-map.js"></script>
+
 {%- include snippets/assign.html
   target = site.data.variables.default.page.sharing
   source0=layout.sharing source1=page.sharing -%}
