--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -5,6 +5,7 @@ type: article
 
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="/assets/js/pbcc-state-reps-map.js"></script>
+<link rel="stylesheet" href="/assets/css/us-map.css">
 
 {%- include snippets/assign.html
   target = site.data.variables.default.page.sharing
