--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -4,7 +4,8 @@ type: article
 ---
 
 <script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="/assets/js/pbcc-state-reps-map.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
+<script src="/assets/js/us-map.js"></script>
 <link rel="stylesheet" href="/assets/css/us-map.css">
 
 {%- include snippets/assign.html
