--- a/_includes/article-list.html
+++ b/_includes/article-list.html
@@ -113,14 +113,14 @@
           <div class="card card--flat">
             {%- if _article.cover -%}
               <div class="card__image">
-                <img class="image" src="{{ _article_cover }}" />
-                <div class="overlay overlay--bottom">
-                  <header>
-                    <a href="{{ _article.pdf | default: _article_url }}" target="_blank">
+                <a href="{{ _article.pdf | default: _article_url }}" target="_blank">
+                  <img class="image" src="{{ _article_cover }}" />
+                  <div class="overlay overlay--bottom">
+                    <header>
                       <h2 class="card__header">{{ _article.title }}</h2>
-                    </a>
-                  </header>
-                </div>
+                    </header>
+                  </div>
+                </a>
               </div>
             {%- endif -%}
             </div>
@@ -130,7 +130,11 @@
         <div class="cell cell--12 cell--md-6 cell--lg-4">
           <div class="card card--flat">
             {%- if _article.cover -%}
-              <div class="card__image"><img src="{{ _article_cover }}" /></div>
+              <div class="card__image">
+                <a href="{{ _article.pdf | default: _article_url }}" target="_blank">
+                  <img src="{{ _article_cover }}" />
+                </a>
+              </div>
             {%- endif -%}
               <div class="card__content">
                 <header>
