--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -73,23 +73,15 @@
     "custom"
 ;
 
-// Add your custom styles below any imports
 /* Table styling */
-.leadership-table {
-    width: 100%;
-    margin: 2rem auto;
-    overflow-x: auto;
-  }
-  
-  .leadership-table table {
-    width: 100%;
-    max-width: 100%;
-    border-collapse: collapse;
-    margin: 0 auto;
-  }
-  
-  .leadership-table th,
-  .leadership-table td {
-    text-align: center;
-    padding: 10px 15px;
+.article__content {
+    table {
+      width: 100%;
+      margin: 2rem auto;
+      
+      th, td {
+        text-align: center;
+        padding: 10px 15px;
+      }
+    }
   }
