--- a/_sass/components/_article-content.scss
+++ b/_sass/components/_article-content.scss
@@ -207,6 +207,7 @@
     width: 100%;
     border-collapse: collapse;
     @include overflow(auto);
+    margin: 0 auto;
     thead, tfoot {
       background-color: $text-background-color;
     }
