--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,10 @@
     <div class="main">
       <div class="header__title">
         <div class="header__brand">
-          <span class="logo-wrapper" style="width: 10px; height: auto; display: inline-block;">
-            {%- include svg/logo.svg -%}
+          <span class="logo-wrapper" style="display: inline-block;">
+            <span style="display: inline-block; width: 50px; height: auto;">
+              {%- include svg/logo.svg -%}
+            </span>
           </span>
           {%- assign _paths_root = site.paths.root | default: site.data.variables.default.paths.root  -%}
           {%- include snippets/get-nav-url.html path=_paths_root -%}
